bundled_metadata/force-app/main/default/objects/Visit/Visit.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>