bundled_metadata/force-app/main/default/objects/Visit/fields/Achieved_Picos_Points__c.field-meta.xml
<CustomField>
    <fullName>Achieved_Picos_Points__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Achieved Picos Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>