bundled_metadata/force-app/main/default/objects/Visit/fields/Actual_Planned_Duration__c.field-meta.xml
<CustomField>
    <fullName>Actual_Planned_Duration__c</fullName>
    <formula>IF(
  OR(
    ISBLANK(PlannedVisitStartTime),
    ISBLANK(PlannedVisitEndTime),
    PlannedVisitEndTime &lt; PlannedVisitStartTime
  ),
  NULL,
  ROUND((PlannedVisitEndTime - PlannedVisitStartTime) * 1440, 0)
)</formula>
    <label>Planned Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>