bundled_metadata/force-app/main/default/objects/Visit/fields/Cancellation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Comments__c</fullName>
    <label>Cancellation Comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>