bundled_metadata/force-app/main/default/objects/Visit/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Store Permanently Closed</fullName>
            </value>
            <value>
                <fullName>Store Decision Maker is not available</fullName>
            </value>
            <value>
                <fullName>Visit Frequency is incorrect</fullName>
            </value>
            <value>
                <fullName>Lack of Time</fullName>
                <isActive>false</isActive>
                <label>Lack of Time</label>
            </value>
            <value>
                <fullName>Store Temporary Closed</fullName>
                <isActive>false</isActive>
                <label>Store Temporary Closed</label>
            </value>
            <value>
                <fullName>Visit Re-scheduled</fullName>
                <isActive>false</isActive>
                <label>Visit Re-scheduled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>