bundled_metadata/force-app/main/default/objects/Visit/fields/CUST_ID__c.field-meta.xml
<CustomField>
    <fullName>CUST_ID__c</fullName>
    <description>Stores the external customer identifier for the visited store. Ensures alignment between Savvy, EDF, and ERP customer master data during visit reporting.</description>
    <label>Customer ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>