bundled_metadata/force-app/main/default/objects/Visit/fields/CustomerToRoute__c.field-meta.xml
<CustomField>
    <fullName>CustomerToRoute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Links the visit to the CustomerToRoute record that generated it. Populated automatically by the visit generation batch when creating visits from routing configuration.</description>
    <inlineHelpText
  >The Customer To Route record that generated this visit. Set automatically during visit generation.</inlineHelpText>
    <label>Customer To Route</label>
    <referenceTo>CustomerToRoute__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>