bundled_metadata/force-app/main/default/objects/Visit/fields/EUSFA_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Event_Name__c</fullName>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>