bundled_metadata/force-app/main/default/objects/Visit/fields/GPID__c.field-meta.xml
<CustomField>
    <fullName>GPID__c</fullName>
    <description>Stores the global PepsiCo identifier for the frontline user logged into Savvy. Used for cross-system alignment of activity, KPIs, and workforce reporting.</description>
    <label>GPID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>