bundled_metadata/force-app/main/default/objects/Visit/fields/Planned_Duration__c.field-meta.xml
<CustomField>
    <fullName>Planned_Duration__c</fullName>
    <description>Planned duration of the visit in minutes. For Store Visit, defaults to 30 min (fixed). For other visit types, BDR selects from dropdown (30, 60, 90, 120, 240, 480).</description>
    <label>Planned Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
                <default>true</default>
                <label>30</label>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>240</fullName>
            </value>
            <value>
                <fullName>480</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>