bundled_metadata/force-app/main/default/objects/Visit/fields/RouteID__c.field-meta.xml
<CustomField>
    <fullName>RouteID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the external identifier of the route for cross-system alignment. Supports syncing with strategic and operational routing tools such as Omnitracs.</description>
    <label>Route ID</label>
    <referenceTo>Route_Sales_Geo__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>