bundled_metadata/force-app/main/default/objects/Visit/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>This represents the order of the visit for the given day</description>
    <label>Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>