bundled_metadata/force-app/main/default/objects/Visit/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>