bundled_metadata/force-app/main/default/objects/Visit/fields/Visit_Duration__c.field-meta.xml
<CustomField>
    <fullName>Visit_Duration__c</fullName>
    <formula>IF(
  OR(
    ISBLANK(ActualVisitStartTime),
    ISBLANK(ActualVisitEndTime),
    ActualVisitEndTime &lt; ActualVisitStartTime
  ),
  NULL,
  ROUND((ActualVisitEndTime - ActualVisitStartTime) * 1440, 0)
)</formula>
    <label>Visit Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>