bundled_metadata/force-app/main/default/objects/Visit/fields/Visit_List__c.field-meta.xml
<CustomField>
    <fullName>Visit_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit List</label>
    <referenceTo>Visit_List__c</referenceTo>
    <relationshipLabel>Visits</relationshipLabel>
    <relationshipName>Visits</relationshipName>
    <type>Lookup</type>
</CustomField>