bundled_metadata/force-app/main/default/objects/Visit/fields/Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>Visit_Type__c</fullName>
    <label>Visit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Store Visit</fullName>
                <default>true</default>
                <label>Store Visit</label>
            </value>
            <value>
                <fullName>Commercial Visit</fullName>
            </value>
            <value>
                <fullName>Customer Event</fullName>
            </value>
            <value>
                <fullName>Animation</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Work With</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>