bundled_metadata/force-app/main/default/objects/Visit/validationRules/Same_Day_Visit_On_Visit_List.validationRule-meta.xml
<ValidationRule>
    <fullName>Same_Day_Visit_On_Visit_List</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW()
&amp;&amp; NOT(ISBLANK(Visit_List__c))
&amp;&amp; DATEVALUE(PlannedVisitStartTime) &lt;&gt; Visit_List__r.Visit_Date__c</errorConditionFormula>
    <errorMessage>Please plan the visit on the same day as Visit List!</errorMessage>
</ValidationRule>